# tsumiki

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/: cliff.toml  dependabot.yml  release-plz.toml
.github/actions/cargo-update/: action.yml
.github/actions/check-versions/: action.yml
.github/actions/doc-test/: action.yml
.github/actions/e2e-test/: action.yml
.github/actions/rustls-integration-test/: action.yml
.github/actions/test/: action.yml
.github/workflows/: cargo-update.yml  ci.yaml  pr-title.yml  release-plz.yml  release.yml
asn1/: CHANGELOG.md  Cargo.toml  README.md
asn1/src/: error.rs  lib.rs
cli/: CHANGELOG.md  Cargo.toml  README.md
cli/src/: decode.rs  error.rs  format.rs  inspect.rs  main.rs  output.rs  utils.rs
cli/src/asn1/: decode.rs  format.rs  inspect.rs  mod.rs
cli/src/cert/: decode.rs  inspect.rs  mod.rs
cli/src/cert/inspect/: mod.rs  tls.rs  verifier.rs
cli/src/crl/: inspect.rs  mod.rs
cli/src/der/: decode.rs  dump.rs  encode.rs  inspect.rs  mod.rs
cli/src/pkcs/: mod.rs
cli/src/pkcs/decode/: mod.rs  pkcs1.rs  pkcs8.rs
cli/src/pkcs/inspect/: mod.rs  pkcs1.rs  pkcs8.rs  sec1.rs
cli/tests/: cert_inspect.rs  crl_inspect.rs
cli/tests/common/: mod.rs
crl/: Cargo.toml  README.md
crl/src/: error.rs  lib.rs
der/: Cargo.toml  README.md
der/src/: error.rs  lib.rs
docs/: RELEASE.md  ROADMAP.md  cli-usage.md  crypto_backend.md  design.md  usage.md
examples/: Cargo.toml  README.md  tls_echo_client.rs  tls_echo_server.rs
examples/certs/: ca.crt  ca.key  ca.srl  chain.pem  client.crt  client.key  sample.crl  sample_der.crl  sample_revoked.crl  server.crt  server.key
pem/: CHANGELOG.md  Cargo.toml  README.md
pem/src/: error.rs  lib.rs
pkcs/: CHANGELOG.md  Cargo.toml  README.md
pkcs/src/: error.rs  lib.rs  private_key.rs  public_key.rs  rustls.rs
pkcs/src/pkcs1/: error.rs  mod.rs  types.rs
pkcs/src/pkcs8/: encrypted.rs  error.rs  mod.rs  types.rs
pkcs/src/pkcs9/: error.rs  mod.rs
pkcs/src/pkcs9/attribute/: challenge_password.rs  content_type.rs  countersignature.rs  extension_request.rs  friendly_name.rs  local_key_id.rs  message_digest.rs  mod.rs  signing_time.rs  smime_capabilities.rs  unstructured_address.rs  unstructured_name.rs
pkcs/src/sec1/: error.rs  mod.rs  types.rs
pkix-types/: CHANGELOG.md  Cargo.toml  README.md
pkix-types/src/: algorithm.rs  directory_string.rs  error.rs  extension.rs  key_identifier.rs  lib.rs  name.rs  oid_name.rs  serial_number.rs  subject_public_key_info.rs  time.rs
pkix-types/src/algorithm/: error.rs  mod.rs
pkix-types/src/algorithm/parameters/: dsa.rs  ec.rs  error.rs  mod.rs
tools/: check-versions.rs
tsumiki/: CHANGELOG.md  Cargo.toml  README.md
tsumiki/src/: decoder.rs  encoder.rs  lib.rs
x509/: CHANGELOG.md  Cargo.toml  README.md
x509/src/: chain.rs  error.rs  extensions.rs  lib.rs  rustls.rs  types.rs
x509/src/cert/: chain.rs  mod.rs  rustls.rs
x509/src/cert/extensions/: basic_constraints.rs  certificate_policies.rs  crl_distribution_points.rs  error.rs  extended_key_usage.rs  inhibit_any_policy.rs  key_usage.rs  mod.rs  name_constraints.rs  policy_constraints.rs  policy_mappings.rs  subject_alt_name.rs  subject_directory_attributes.rs  subject_info_access.rs  subject_key_identifier.rs
x509/src/crl/: error.rs  mod.rs
x509/src/crl/extensions/: certificate_issuer.rs  crl_number.rs  crl_reason.rs  delta_crl_indicator.rs  error.rs  invalidity_date.rs  issuing_distribution_point.rs  mod.rs
x509/src/extensions/: authority_info_access.rs  authority_key_identifier.rs  basic_constraints.rs  certificate_policies.rs  crl_distribution_points.rs  distribution_point.rs  error.rs  extended_key_usage.rs  freshest_crl.rs  general_name.rs  inhibit_any_policy.rs  issuer_alt_name.rs  key_usage.rs  mod.rs  name_constraints.rs  policy_constraints.rs  policy_mappings.rs  subject_alt_name.rs  subject_directory_attributes.rs  subject_info_access.rs  subject_key_identifier.rs
