[workspace]
resolver = "2"
members = [ "asn1", "cli", "der", "examples", "pem", "pkcs", "pkix-types", "tsumiki" , "x509"]

[workspace.package]
version = "0.0.1"
authors = ["terassyi"]
edition = "2024"
rust-version = "1.87.0"
license = "MIT"
repository = "https://github.com/terassyi/tsumiki"
keywords = ["x509", "certificate", "asn1", "der", "pem"]
categories = ["cryptography", "parser-implementations"]

[workspace.dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
thiserror = "2.0.17"
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
num-bigint = "0.4.6"
base64 = "0.22.1"
rustls-pki-types = "1.14.0"
rustls = "0.23"
