[workspace]
resolver = "2"
members = [ "asn1", "cli", "der", "examples", "pem", "pkcs", "pkix-types", "tsumiki" , "x509"]

[workspace.package]
authors = ["terassyi"]
edition = "2024"
rust-version = "1.87.0"
license = "MIT"
repository = "https://github.com/terassyi/tsumiki"
keywords = ["x509", "certificate", "asn1", "der", "pem"]
categories = ["cryptography", "parser-implementations"]

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
rstest = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = "0.4"
base64 = "0.22"
rustls-pki-types = "1.14"
rustls = "0.23"
