[package]
name = "asn1"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { workspace = true }
der = { path = "../der" }
num-bigint = { workspace = true }
num-traits = "0.2.19"
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
tsumiki ={ path = "../tsumiki" }

[features]
default = ["serde"]
serde = ["dep:serde", "chrono/serde"]

[dev-dependencies]
pem = { path = "../pem" }
rstest = { workspace = true }
serde_json = "1.0.147"
