[package]
name = "tsumiki-asn1"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "ASN.1 object representation and parser for X.509 certificates"

[dependencies]
chrono = { workspace = true }
tsumiki-der = { path = "../der" }
num-bigint = { workspace = true }
num-traits = "0.2"
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
tsumiki = { path = "../tsumiki" }

[features]
default = ["serde"]
serde = ["dep:serde", "chrono/serde"]

[dev-dependencies]
tsumiki-pem = { path = "../pem" }
rstest = { workspace = true }
serde_json = { workspace = true }
