[package]
name = "tsumiki-asn1"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "ASN.1 object representation and parser for X.509 certificates"

[dependencies]
chrono = { workspace = true }
tsumiki-der = { version = "0.1.0", path = "../der" }
num-bigint = { workspace = true }
num-traits = "0.2"
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
tsumiki = { version = "0.1.0", path = "../tsumiki" }

[features]
default = ["serde"]
serde = ["dep:serde", "chrono/serde"]

[dev-dependencies]
tsumiki-pem = { version = "0.1.0", path = "../pem" }
rstest = { workspace = true }
serde_json = { workspace = true }
