[package]
name = "cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "tsumiki"
path = "src/main.rs"

[dependencies]
x509 = { path = "../x509", features = ["rustls"] }
pem = { path = "../pem" }
der = { path = "../der" }
asn1 = { path = "../asn1" }
pkcs = { path = "../pkcs" }
pkix-types = { path = "../pkix-types" }
tsumiki = { path = "../tsumiki" }
clap = { version = "4.5", features = ["derive"] }
thiserror.workspace = true
serde_json.workspace = true
serde_yml = "0.0.12"
sha2 = "0.10.9"
sha1 = "0.10.6"
base64.workspace = true
chrono.workspace = true
rustls.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
serde_json.workspace = true
