[package]
name = "tsumiki-cli"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Command-line tool for X.509 certificate inspection and PKCS handling"

[[bin]]
name = "tsumiki"
path = "src/main.rs"

[dependencies]
tsumiki-x509 = { path = "../x509", features = ["rustls"] }
tsumiki-pem = { path = "../pem" }
tsumiki-der = { path = "../der" }
tsumiki-asn1 = { path = "../asn1" }
tsumiki-pkcs = { path = "../pkcs" }
tsumiki-pkix-types = { path = "../pkix-types" }
tsumiki = { path = "../tsumiki" }
clap = { version = "4.5", features = ["derive"] }
thiserror.workspace = true
serde_json.workspace = true
serde_yml = "0.0.12"
sha2 = "0.10.9"
sha1 = "0.10.6"
base64.workspace = true
chrono.workspace = true
rustls.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
serde_json.workspace = true
