[package]
name = "tsumiki-cli"
version = "0.1.0-dev.2"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Command-line tool for X.509 certificate inspection and PKCS handling"

[[bin]]
name = "tsumiki"
path = "src/main.rs"

[dependencies]
tsumiki-x509 = { version = "0.1.0-dev.2", path = "../x509", features = ["rustls"] }
tsumiki-pem = { version = "0.1.0-dev.2", path = "../pem" }
tsumiki-der = { version = "0.1.0-dev.2", path = "../der" }
tsumiki-asn1 = { version = "0.1.0-dev.2", path = "../asn1" }
tsumiki-pkcs = { version = "0.1.0-dev.2", path = "../pkcs" }
tsumiki-pkix-types = { version = "0.1.0-dev.2", path = "../pkix-types" }
tsumiki = { version = "0.1.0-dev.2", path = "../tsumiki" }
clap = { version = "4.5", features = ["derive"] }
thiserror.workspace = true
serde_json.workspace = true
serde_yml = "0.0"
sha2 = "0.10"
sha1 = "0.10"
base64.workspace = true
chrono.workspace = true
rustls.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
serde_json.workspace = true
