[package]
name = "tsumiki-der"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "DER (Distinguished Encoding Rules) parser for ASN.1 structures"

[dependencies]
tsumiki-pem = { path = "../pem" }
nom = "8.0.0"
thiserror = { workspace = true }
tsumiki = { path = "../tsumiki" }

[dev-dependencies]
rstest = { workspace = true }
