[package]
name = "tsumiki-der"
version = "0.1.0-dev.2"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "DER (Distinguished Encoding Rules) parser for ASN.1 structures"

[dependencies]
tsumiki-pem = { version = "0.1.0-dev.2", path = "../pem" }
nom = "8.0"
thiserror = { workspace = true }
tsumiki = { version = "0.1.0-dev.2", path = "../tsumiki" }

[dev-dependencies]
rstest = { workspace = true }
