[package]
name = "tsumiki-pem"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "PEM format parser and encoder for X.509 certificates"

[dependencies]
base64.workspace = true
regex = "1.11"
thiserror = { workspace = true }
tsumiki = { path = "../tsumiki" }

[dev-dependencies]
rstest = { workspace = true }
