[package]
name = "tsumiki-pkix-types"
version = "0.1.0-dev.2"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "PKIX types (AlgorithmIdentifier, Name, etc.) for X.509 certificates"

[dependencies]
tsumiki-asn1 = { version = "0.1.0-dev.2", path = "../asn1" }
serde = { workspace = true }
thiserror = { workspace = true }
tsumiki = { version = "0.1.0-dev.2", path = "../tsumiki" }

[dev-dependencies]
rstest = { workspace = true }
serde_json = { workspace = true }
