[package]
name = "tsumiki-pkix-types"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "PKIX types (AlgorithmIdentifier, Name, etc.) for X.509 certificates"
readme = "README.md"

[dependencies]
tsumiki-asn1 = { version = "0.1.0", path = "../asn1" }
serde = { workspace = true }
thiserror = { workspace = true }
tsumiki = { version = "0.1.0", path = "../tsumiki" }

[dev-dependencies]
rstest = { workspace = true }
serde_json = { workspace = true }
