[package]
name = "tsumiki"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core traits for X.509 certificate parsing and handling"

[dependencies]
