[package]
name = "x509"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = []
rustls = ["dep:rustls-pki-types"]

[dependencies]
rustls-pki-types = { version = "1.14.0", optional = true }
asn1 = { path = "../asn1" }
chrono = { workspace = true }
der = { path = "../der" }
ipnet = { version = "2.10.1", features = ["serde"] }
pem = { path = "../pem" }
pkix-types = { path = "../pkix-types" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tsumiki = { path = "../tsumiki" }

[dev-dependencies]
rstest.workspace = true
